log
Thu 09 May 2024 04:12:31 PM UTC: 
 tests:  1|8
total_score: 0/70
8d01558
Thu 09 May 2024 05:16:15 PM UTC: 
 tests:  1|8
total_score: 0/70
9c65380
Thu 09 May 2024 05:17:44 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5959e4e
Thu 09 May 2024 05:26:11 PM UTC: 
 treemap.c | 38 ++++++++++++++++++++++++++++++++++++++
 1 file changed, 38 insertions(+)
 tests:  6|6
total_score: 15/70
016d82c
Thu 09 May 2024 05:57:10 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
9238ac6
Thu 09 May 2024 05:59:19 PM UTC: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:121:20: error: variable ‘child’ set but not used [-Werror=unused-but-set-variable]
  121 |         TreeNode * child;
      |                    ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e685a60
Thu 09 May 2024 06:01:04 PM UTC: 
 treemap.c | 29 +----------------------------
 1 file changed, 1 insertion(+), 28 deletions(-)
 tests:  8|5
total_score: 15/70
786f87b
